# Cujo

./: .babelrc  .gitignore  LICENSE  README.md  circle.yml  dev.compose.yaml  docker-compose.yaml  dockerfile  karma.conf.js  package-lock.json  package.json  prod.compose.yaml  publish.sh  webpack.config.js
.circleci/: config.yml  workflows.yaml
client/: .dockerignore  Dockerfile  env.sh  index.js  karma.conf.js  package.json  webpack.config.js
client/nginx/: nginx.conf
client/public/: index.html  main.js  main.js.map
client/src/: App.css  App.js  App.tsx  CVModel.ts  index.css  index.html  index.js  index.tsx
client/src/assets/: data.json
client/src/home/: Home.css  Home.tsx
client/src/model/: CV.ts
client/src/nav/: NavPanel.css  NavPanel.tsx
client/src/shared/: Section.css  Section.scss
client/test/: test.spec.js
coverage/html/: index.html
coverage/html/presentational/: Input.js.html  index.html
coverage/html/test/: index.html  test.spec.js.html
nginx/: cujo_proxy.conf
portfolio/: .dockerignore  .prettierignore  .sass-lint.yaml  Dockerfile  README.md  app.env  craco.config.js  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
portfolio/contentful_cache/: export-config.json  export.json
portfolio/nginx/: nginx.conf
portfolio/public/: index.html  manifest.json
portfolio/src/: App.css  App.scss  App.tsx  Cujo.gql  global.d.ts  index.css  index.scss  index.tsx  ioc.ts
portfolio/src/app/: layout.tsx  page.tsx
portfolio/src/assets/: data.json
portfolio/tools/: fix_contentful_types.sh
portfolio_next/: .dockerignore  .eslintrc.json  .prettierrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
portfolio_next/@types/: global.d.ts
portfolio_next/app/: Cujo.gql  Cujo.scss  CujoFetch.ts  global.d.ts  ioc.ts
portfolio_next/pages/: _app.tsx  blog.tsx  cv.tsx  index.tsx
portfolio_next/src/: Cujo.module.scss  Cujo.scss  Cujo.tsx  CujoISR.ts  CujoQuery.ts  ioc.ts  theme.ts
portfolio_razzle/: .eslintrc.js  Dockerfile  package.json  razzle.config.js  tsconfig.json
portfolio_razzle/public/: manifest.json
portfolio_razzle/src/: App.tsx  Cujo.gql  Cujo.tsx  client.tsx  config.ts  global.d.ts  index.ts  server.tsx
scripts/: build-portfolio.sh  build-service.sh  deploy-dev.sh  deploy-prod.sh  deploy.sh  redeploy.sh  redeploy_portfolio.sh  teardown-prod.sh  teardown.sh
server/: Dockerfile  index.js  karma.conf.js  package.json  server.env
server/src/: go.mod  go.sum  main.go
server/test/: test.spec.js
service/: .env  Cargo.toml  Dockerfile  data.json
service/contentful/: Cargo.toml
service/contentful/src/: contentful_client.rs  entry_resolver.rs  errors.rs  http_client.rs  json_util.rs  lib.rs  models.rs  query_builder.rs
service/src/: main.rs  routes.rs
service/src/auth/: auth0_client.rs  mod.rs  redirect_client.rs  validator.rs
service/src/blog/: blog_post.rs  blog_reader.rs  client.rs  media.rs  mod.rs  model.rs  post.rs  tag.rs  wp_media.rs  wp_post.rs  wp_tag.rs
service/src/blog/model/: blog_post.rs  mod.rs  wp_media.rs  wp_post.rs  wp_tag.rs
service/src/cache/: cache.rs  cache_data.rs  cache_regenerator.rs  mod.rs
service/src/cv/: cv_reader.rs  mod.rs  model.rs  routes.rs
service/src/graphql/: mod.rs  query.rs  routes.rs  schema.rs
service/src/prerender/: mod.rs  prerender_client.rs
service/src/rest/: mod.rs  routes.rs
service/src/revalidate/: mod.rs  revalidate_client.rs
service/src/server/: config.rs  mod.rs  routes.rs
service/src/subscription/: mod.rs  pubnub_subscription.rs
service/src/util/: env_parser.rs  file_reader.rs  json_parser.rs  mod.rs  reader.rs
src/client/: index.js
src/server/: index.js
storage/minio/: minio.env
storage/mongo/: mongo-setup-users.js  mongo-setup.js  mongo.env
test/: test.spec.js
(+458 files in other folders)
