[package]
name = "cujo"
version = "0.1.0"
authors = ["Daniel Clarke <dc@danielclarke.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contentful = { path = "./contentful" }

actix = "0.12.0"
actix-web = "4.0.0-beta.3"
actix-rt = "2.2.0"
listenfd = "0.3.3"
dotenv = "0.11.0"
log = "0.4.14"
env_logger = "0.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
mocktopus = "0.7.11"
mockito = "0.30.0"
reqwest = { version = "0.11.3", features = ["json"] }
futures = "0.3.15"
base64 = "0.13.0"
envy = "0.4.2"
chrono = { version = "0.4.19", features= ["serde"]}