[package]
name = "cujo"
version = "0.1.0"
authors = ["Daniel Clarke <dc@danielclarke.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contentful = { path = "./contentful" }

actix = "0.13.0"
actix-web = "4.1.0"
actix-rt = "2.7.0"
listenfd = "1.0.0"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
mocktopus = "0.7.11"
mockito = "0.31.0"
reqwest = { version = "0.11.11", features = ["json"] }
futures = "0.3.21"
base64 = "0.13.0"
envy = "0.4.2"
async-trait = "0.1.56"
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "1.0.0"
derive_more = "0.99.2"
async-graphql = "4.0.5"
async-graphql-actix-web = "4.0.5"