[package]
name = "cujo"
version = "0.1.0"
authors = ["Daniel Clarke <clarkit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contentful = { path = "./contentful" }
actix = "0.13.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
listenfd = "1.0.1"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11.16", features = ["json"] }
futures = "0.3.28"
base64 = "0.21.0"
envy = "0.4.2"
async-trait = "0.1.68"
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "4091.0.0"
derive_more = "0.99.17"
async-graphql = "5.0.7"
async-graphql-actix-web = "5.0.7"
actix-cors = "0.6.4"