[package]
name = "contentful"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"]}
chrono = { version = "0.4.19", features= ["serde"]}

[dev-dependencies]
anyhow = "1.0.43"
dotenv = "0.15.0"
env_logger = "0.9.0"
tokio = { version = "1.10.0", features=["full"]}