[package]
name = "contentful"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"]}
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"]}
chrono = { version = "0.4.19", features= ["serde"]}
async-graphql = { version = "4.0.5", features = ["chrono"] }

[dev-dependencies]
anyhow = "1.0.43"
dotenv = "0.15.0"
env_logger = "0.9.0"
tokio = { version = "1.19.2", features=["full"]}
