[package]
name = "contentful"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"]}
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}
chrono = { version = "0.4.24", features= ["serde"]}
async-graphql = { version = "5.0.7", features = ["chrono"] }

[dev-dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.25.0", features=["full"]}
